<resources>
    <string name="app_name">Crick Me</string>
    <string name="app_subtitle">Find your team updates here</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_match">Matches</string>
    <string name="nav_team">Teams</string>
    <string name="nav_player">Players</string>
    <string name="nav_weather">Weather Report</string>

    <string name="action_settings">Settings</string>
    <string name="et_weather_text">London</string>
    <string name="btn_weather_tooltip">Click button to know your city weather</string>
    <string name="manage_player">Player Details</string>
    <string name="btn_add_player">Add New Player</string>
    <string name="hint_player_nickname">Nick Name</string>
    <string name="hint_player_firstname">First Name</string>
    <string name="hint_player_lastname">Last Name</string>
    <string name="hint_player_fullname">Full Name</string>
    <string name="chk_is_active">Active</string>
    <string name="tv_player_position">Position</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_save">Save</string>
    <string name="tv_player_role">Play as</string>
    <string name="manage_match">Match Details</string>
    <string name="txt_match_title">Match Title</string>
    <string name="txt_match_series">Series Name</string>
    <string name="txt_match_description">Match Details</string>
    <string name="txt_match_schedule_date">Match Date</string>
    <string name="txt_match_team1">Team 1</string>
    <string name="txt_match_team2">Team 2</string>
    <string name="txt_new_match">Add New Match</string>
    <string name="btn_caption_date">Pick Date</string>
</resources>
