<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_match"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_match" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_team" />
        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_player" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_weather" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
